tests/suite/fail/generated/borrow/fail_move_take_msg.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let msg = "hello"
    take(msg)
    print(msg) //~ ERROR was moved
}
